# CSCI_366_Programming_Assignments_PA1_Basic_Battleship_

./: CMakeLists.txt
src/: Client.cpp  Server.cpp
